# evaluation-bandit

./: .gitignore  README.md  main.typ  pyproject.toml
evaluation_bandit/: algorithms.py  annotation_sampler.py  annotation_simulation.py  estimators.py  simulation.py  utils.py  utils_fig.py
scripts/: 01-annotation_simulation.py  01-pilot_simulation.py  01-simulation_test.py  02-mock_figure.py  02a-simulation_compute.py  02b-simulation_compute_launch.sh  02c-simulation_plot.py  02d-simulation_overview.py  03-dynamic_simulation.py  03-simulation_test.py  03a-simulation_plot.py  03a-simulation_test.py  03a-synth_compute.py  03b-simulation_debug.py  03b-simulation_overview.py  03b-synth_launch.sh  03c-synth_plot.py  04-check_assumptions.py  04-plot_simulation.py  04a-simulation_compute.py  04a-simulation_wmt25_plot.py  04a-simulation_wmt_compute.py  04a-simulation_wmt_plot.py  04b-simulation_plot.py  04b-simulation_wmt25_compute.py  04b-simulation_wmt_compute.py  04b-simulation_wmt_plot.py  04c-simulation_overview.py  04d-simulation_investigate.py  05-harmonic_microplot.py  05-sampler_distribution.py  05-sampler_distribution_plot.py  05a-sampler_distribution_compute.py  05a-simulation_metrics_compute.py  05a-simulation_wmt_metrics_compute.py  05a-simulation_wmt_metrics_plot.py  05b-sampler_distribution_launch.sh  05b-simulation_metrics_plot.py  05b-simulation_wmt_metrics_plot.py  05c-sampler_distribution_plot.py  (+8 more)
src/: algorithms.py  annotation_sampler.py  annotation_simulation.py  sampler.py  simulation.py  utils.py  utils_fig.py
src/deprecated/: competition_model_bayes.py
translation_bandit/: algorithms.py  annotation_sampler.py  annotation_simulation.py  simulation.py  utils.py
