[project]
name = "translation-bandit"
version = "0.0.0"
description = "Dynamic Contrastive Evaluation with Humans"
readme = "README.md"
license = { text = "apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Vilém Zouhar", email = "vilem.zouhar@gmail.com" }]
keywords = [
    "evaluation",
    "machine translation",
    "human evaluation",
    "annotation",
]
dependencies = [
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/zouharvi/translation-bandit"
Issues = "https://github.com/zouharvi/translation-bandit/issues"

[tool.setuptools]
package-dir = { "translation_bandit" = "translation_bandit" }
packages = ["translation_bandit"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# pip install -e . --config-settings editable_mode=strict