[project]
name = "evaluation-bandit"
version = "0.0.0"
description = "Dynamic allocation of human evaluation via bandits"
readme = "README.md"
license = { text = "apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Vilém Zouhar", email = "vilem.zouhar@gmail.com" }]
keywords = [
    "evaluation",
    "machine translation",
    "human evaluation",
    "annotation",
]
dependencies = [
    "subset2evaluate>=1.0.18",
    "numpy>=2.0.0",
    "matplotlib>=3.10",
    "tqdm>=4.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/zouharvi/evaluation-bandit"
Issues = "https://github.com/zouharvi/evaluation-bandit/issues"

[tool.setuptools]
package-dir = { evaluation_bandit = "evaluation_bandit" }
packages = ["evaluation_bandit"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# pip install -e . --config-settings editable_mode=strict

[tool.ruff.lint]
ignore = ["E402", "E731", "F401"]